--- a/nlog.config
+++ b/nlog.config
@@ -22,10 +22,22 @@
 					enableArchiveFileCompression="True"
 					layout="${longdate}|${aspnet-traceidentifier}|${uppercase:${level}}|${threadid}|${logger}|${message} ${exception:format=ToString}|${aspnet-request-method}|${aspnet-request-url}|${aspnet-mvc-action}|${aspnet-request-posted-body}" />
 		</target>
+		<target xsi:type="File" name="exception" queueLimit="10000" batchSize="1000">
+			<target xsi:type="File"
+					name="exception"
+					fileName="${basedir}\nlog-all-${shortdate}-${environment:ASPNETCORE_ENVIRONMENT}.log"
+					archiveFileName="${basedir}\archives\nlog-all-${shortdate}-${environment:ASPNETCORE_ENVIRONMENT}.archive-{#}.zip"
+					archiveEvery="Day"
+					maxArchiveDays="7"
+					archiveNumbering="DateAndSequence"
+					enableArchiveFileCompression="True"
+					layout="${longdate}|${aspnet-traceidentifier}|${uppercase:${level}}|${threadid}|${logger}|${message} ${exception:format=ToString}|${aspnet-request-method}|${aspnet-request-url}|${aspnet-mvc-action}|${aspnet-request-posted-body}" />
+		</target>
 	</targets>
 
 	<!-- rules to map from logger name to target -->
 	<rules>
-		<logger name="*" minlevel="Error" writeTo="AllAsyncWrapper" />
+		<logger name="*" minlevel="Error" writeTo="AllAsyncWrapper" />\
+		<logger name="RestaurantController.*" minlevel="Error" writeTo="exception"/>
 	</rules>
 </nlog>
