--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Authentication": {
+        "JwtKey": "PRVT_KEY",
+        "JwtExpireDays": 15,
+        "JwtIssuer" :  "http://restapi.com"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
